# pNVSE

./: CMakeLists.txt  README.md
JIP/: base_defs.h  netimmerse.cpp  netimmerse.h  prefix.h
cmake/: Macros.cmake
nvse/nvse/: CommandTable.h  GameAPI.cpp  GameAPI.h  GameBSExtraData.cpp  GameBSExtraData.h  GameExtraData.cpp  GameExtraData.h  GameForms.cpp  GameForms.h  GameObjects.cpp  GameObjects.h  GameProcess.h  GameTasks.h  GameTypes.h  InventoryRef.h  NiNodes.cpp  NiNodes.h  NiObjects.h  NiTypes.h  ParamInfos.h  ParamInfosNVSE.h  PluginAPI.h  SafeWrite.cpp  SafeWrite.h  Utilities.h  utility.cpp  utility.h
nvse_plugin_example/: Actor_Ext.cpp  Actor_Ext.h  Animation_Ext.cpp  Animation_Ext.h  AuxVars.cpp  AuxVars.h  Base_Ext.cpp  Base_Ext.h  DevkitCompiler.cpp  DevkitCompiler.h  DevkitListFunctions.cpp  Devkit_kNVSE.cpp  EventHandlers.cpp  EventHandlers.h  General.cpp  Initializers.h  InstanceLoadSave.cpp  InventoryRef.cpp  InventoryRef.h  KitInfoFunctions.cpp  KitLoader.cpp  KitLoader.h  L1_Load.cpp  L2_Save.cpp  L3_SaveHooks.cpp  Link_kNVSE.cpp  NiStreamFunctions.cpp  ReplaceFunctions.cpp  ReplaceFunctions.h  RewriteWeaponStats.cpp  SaveSystem.cpp  SaveSystem.h  ScrappedFunctions.cpp  ScriptConverter.cpp  ScriptConverter.h  ScriptFunctions.cpp  TESForm_Ext.cpp  TESObjectREFR_Ext.cpp  TestHooks.h  VariableFunctions.h  (+17 more)
src/: CMakeLists.txt  WeapInstFunct.h  main.cpp  ppNVSE.h  ppNVSE_Functions.h
